@@ -4,7 +4,8 @@ cod-tools (unreleased)
     - test outputs for codcif2sdf and molcif2sdf;
     - correcting a typo 'succesfully' -> 'successfully';
     - codcif:
-      - adjusting iterator data types in datablock.c.
+      - adjusting signed and unsigned integer types in cif_grammar.y,
+        cif2_grammar.y and datablock.c.
 
 cod-tools (2.5)
 
